# shift-app

./: .gitignore  README.md
.specify/history/: TASK-001_history.md  (+13 more)
backend/: .env.example  alembic.ini  manage.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 54dde23e1a50_add_uuid_column_to_family_links.py  __init__.py  b42553576ae2_create_departments_table.py  d9b0c5dbf5da_create_users_table.py  fa3d09a3a6fe_create_remaining_core_tables.py  fc79f9cea97f_create_schedules_table.py
backend/app/: exceptions.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  departments.py  family_links.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  department.py  family_link.py  financial_ledger.py  schedule.py  shift_sale.py  shift_swap.py  user.py
backend/app/schemas/: auth.py  department.py  family_link.py
backend/app/services/: auth_service.py  department_service.py  family_link_service.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_auth_api.py  test_db_integration.py  test_departments_api.py  test_family_links_api.py
backend/tests/system/: __init__.py  test_system_e2e.py
backend/tests/unit/: __init__.py  test_db_constraints.py  test_models_unit.py
postman/: README.md  shiftsync_postman_collection.json  shiftsync_postman_environment.json
shiftsync_app/: README.md  pubspec.yaml
specs/: ai_roles_and_tasks.md  database_schema.md  requirements.md  ui_ux_spec.md
(+59 files in other folders)
